js/src/tests/test262/built-ins/Error/prototype/S15.11.4_A3.js
assert
.
throws
(
TypeError
(
)
=
>
{
Error
.
prototype
(
)
;
throw
new
Test262Error
(
)
;
}
)
;
reportCompare
(
0
0
)
;
